Actividad-letschat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: letschat
spec:
  rules:
  - host: www.chat-eloy.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: letschat
            port:
              number: 8080
